2003-02-07  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTableWriter.cs: Removed; the code is now in
	MonoSymbolFile.cs and MonoSymbolWriter.cs.

2003-02-07  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs: The symbol file is now a resource in the
	assembly instead of a separate file.

	* MonoSymbolTable.cs: Did a few more cleanups, sort the line
	number table and remove duplicate line numbers.

2003-02-05  Martin Baulig  <martin@ximian.com>

	Modified the symbol file format to speed up method looks by name
	and cleaned this up a lot.

	* MonoSymbolFile.cs: New public class.  This is now a public class
	and writes and reads the symbol file.

	* IMonoBinaryReader.cs: Removed.

	* MonoSymbolTable.cs: Set version number to 29.

2003-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* MonoSymbolWriter.cs (OpenMethod): Make it work on constructors.

2002-10-13  Martin Baulig  <martin@gnome.org>

	* MonoSymbolTable.cs: Set version number to 28.
	(SourceFileEntry): Read the methods when they're needed.
	(MethodSourceEntry): Made this a struct, not a class.

2002-10-13  Martin Baulig  <martin@gnome.org>

	* MonoSymbolTable.cs: Set version number to 27.  Added a source
	file table which is used to search a method by source file + line number.

2002-09-21  Martin Baulig  <martin@gnome.org>

	* MonoSymbolTable.cs: Set version number to 26.  Removed all the dynamic
	stuff, this library now just deals with the compiler generated symbol table.
	The dynamic stuff is private between the JIT and the debugger.

2002-09-21  Martin Baulig  <martin@gnome.org>

	* MonoSymbolTable.cs: Set version number to 25.  Added information about
	local variables.

2002-09-20  Martin Baulig  <martin@gnome.org>

	* MonoSymbolTable.cs: Set version number to 24.  Added a type index
	table.  Write the type of a local variable or a parameter as an index
	into this table.

2002-09-20  Martin Baulig  <martin@gnome.org>

	* IMonoSymbolWriter.cs: Remove all the unused interfaces.
